--- a/ChronoKeep/UI/API/APIWindow.xaml
+++ b/ChronoKeep/UI/API/APIWindow.xaml
@@ -16,13 +16,13 @@
         >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:TitleBar
             Grid.Row="0">
         </ui:TitleBar>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Margin="10">
             <Frame x:Name="APIFrame" NavigationUIVisibility="Hidden" IsTabStop="False" />
         </Grid>
     </Grid>
