--- a/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
@@ -19,27 +19,26 @@
         >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:TitleBar
             Grid.Row="0">
         </ui:TitleBar>
-        <StackPanel Grid.Row="1">
-            <DockPanel>
-                <TextBlock Text="Name" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
+        <StackPanel Grid.Row="1" Margin="5">
+            <DockPanel Margin="10,0,10,0">
+                <TextBlock Text="Name" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox x:Name="nameBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Keyboard_Up" />
             </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Year Code" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
+            <DockPanel Margin="10,0,10,0">
+                <TextBlock Text="Year Code" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox x:Name="yearCodeBox" FontSize="16" Margin="5,10,10,10" KeyUp="Keyboard_Up"/>
             </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Date" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
+            <DockPanel Margin="10,0,10,0">
+                <TextBlock Text="Date" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
                 <DatePicker x:Name="datePicker" Margin="5,10,10,10" KeyUp="Keyboard_Up" FontSize="16"/>
             </DockPanel>
-            <TextBlock Name="CopyLabel" Text="Copy from old event:" Margin="20,10,20,10" FontSize="16"/>
-            <ComboBox Name="oldEvent" FontSize="16" Margin="20,0,20,10" />
+            <ui:AutoSuggestBox Name="oldEvent" FontSize="16" Margin="20,10,20,10" PlaceholderText="Copy from old event?"/>
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                 <Button Content="Submit" Margin="20,10,10,15" Width="120" Click="Submit_Click" FontSize="16" Height="35"/>
                 <Button Content="Cancel" Margin="10,10,20,15" Width="120"  Click="Cancel_Click" FontSize="16" Height="35"/>
