--- a/ChronoKeep/UI/API/RemoteReadersWindow.xaml
+++ b/ChronoKeep/UI/API/RemoteReadersWindow.xaml
@@ -11,24 +11,24 @@
         ExtendsContentIntoTitleBar="True"
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
-        WindowStartupLocation="CenterScreen"
-        Height="215"
-        Width="340"
+        Height="400"
+        Width="1090"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
+        WindowStartupLocation="CenterScreen"
         Closed="Window_Closed"
         >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:TitleBar
             x:Name="titleBar"
             Grid.Row="0">
         </ui:TitleBar>
-        <StackPanel Grid.Row="1">
-            <StackPanel x:Name="loadingPanel" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,20,10,20">
+        <StackPanel Grid.Row="1" Width="1090">
+            <StackPanel x:Name="loadingPanel" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,20,10,20" Height="300">
                 <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5" TextAlignment="Center"/>
                 <ui:ProgressRing IsIndeterminate="True" Margin="5,5,5,5"/>
             </StackPanel>
