Added version field to SettingsAllResponse and ConnectionResponse

--- a/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
@@ -26,6 +26,8 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:TitleBar
+            Margin="10,0,0,0"
+            Name="titleBar"
             Grid.Row="0">
         </ui:TitleBar>
         <StackPanel
