--- a/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
@@ -286,12 +286,20 @@
                         Height="35"
                         Margin="5,5,5,5"
                         />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button
                         Content="Stop Server"
                         x:Name="stopServerButton"
                         Click="stopServerButton_Click"
+                        Width="185"
+                        Height="35"
+                        Margin="5,5,5,5"
+                        />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button
+                        Content="Restart Server"
+                        x:Name="restartServerButton"
+                        Click="restartServerButton_Click"
                         Width="185"
                         Height="35"
                         Margin="5,5,5,5"
